update installation instructions
Signed-off-by: Sean Cribbs <seancribbs@gmail.com>

--- a/README
+++ b/README
@@ -30,7 +30,7 @@ http://www.famfamfam.com/lab/icons/silk/
 
 3) Run the extension update task.
 
-  $ rake radiant:extensions:multi_site:update
+  $ rake production radiant:extensions:multi_site:update
 
 4) Restart your server
 
